syntax = "proto3";

package hotel;

import "github.com/zrma/1d1c/cmd/micro/booking/srv/profile/proto/profile.proto";
import "github.com/zrma/1d1c/cmd/micro/booking/srv/rate/proto/rate.proto";

service Hotel {
    rpc Rates (Request) returns (Response) {
    };
}

message Request {
    string inDate = 1;
    string outDate = 2;
}

message Response {
    repeated profile.Hotel hotels = 1;
    repeated rate.RatePlan ratePlans = 2;
}
 
